Brush's "Paint curve presets" in Image paint in UV\Image Editor doesn't work if weight paint mode is active #31093

Closed
opened 2012-04-25 12:38:55 +02:00 by Alaa El-din alapsawy · 4 comments

%%%1- open Blender
2- split the "3d view" and change the new window type to UV\Image Editor
3- in the "3d view" window go to "Weight Paint" Mode
4- in the "UV\Image Editor" enable "image painting mode" then choose any brush but "F Draw" brush.
5- go to "Paint Curve" section in the brush option and try clicking on the presets buttons .. they won't work.

this Bug is in "blender 2.62 official" and "blender 2.63 RC"
thanks%%%

%%%1- open Blender 2- split the "3d view" and change the new window type to UV\Image Editor 3- in the "3d view" window go to "Weight Paint" Mode 4- in the "UV\Image Editor" enable "image painting mode" then choose any brush but "F Draw" brush. 5- go to "Paint Curve" section in the brush option and try clicking on the presets buttons .. they won't work. this Bug is in "blender 2.62 official" and "blender 2.63 RC" thanks%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Currently curve preset operator is checking for active object's mode and changes curve for it which fails in this configuration. Should be simple to fix, but seems this thing also affects some other parts of code and prefer not to make such a changes so close to release (since it's not a regression).
Will look into this just after release.%%%

%%%Currently curve preset operator is checking for active object's mode and changes curve for it which fails in this configuration. Should be simple to fix, but seems this thing also affects some other parts of code and prefer not to make such a changes so close to release (since it's not a regression). Will look into this just after release.%%%

%%%Fixed in svn rev47392. Thanks for the report, closing.%%%

%%%Fixed in svn rev47392. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31093
No description provided.